[package]
name = "eddsa"
version = "0.1.0"
authors = ["Luke Pearson <luke@dusk.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-bls12_381 = "0.1.3"
dusk-jubjub = { git = "https://github.com/dusk-network/jubjub.git" , tag = "v0.3.6"}
poseidon252 = { git = "https://github.com/dusk-network/Poseidon252" }
rand = "0.7.0"

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies.rand_core]
version = "0.5"
default-features = false

[dev-dependencies.rand_xorshift]
version = "0.2"
default-features = false

