[package]
name = "eddsa"
version = "0.1.0"
authors = ["Luke Pearson <luke@dusk.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-poseidon = {git = "https://github.com/dusk-network/Poseidon252", tag = "v0.19.0"}
dusk-plonk = "0.6.1"
rand = "0.7.0"
thiserror = "1.0"
dusk-bytes = "0.1"

[build-dependencies]
dusk-plonk = "0.6.1"

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies.rand_core]
version = "0.5"
default-features = false

[dev-dependencies.rand_xorshift]
version = "0.2"
default-features = false

